--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ file(GLOB_RECURSE PROVISION_D_SOURCES "${PROVISION_SOURCE_DIR}*.d")
 find_package(PkgConfig REQUIRED)
 
 add_library(provision STATIC ${PROVISION_D_SOURCES})
+target_include_directories(provision PRIVATE rt/)
 target_include_directories(provision PUBLIC ${PROVISION_SOURCE_DIR})
 
 pkg_check_modules(plist IMPORTED_TARGET libplist-2.0)
